src/objects/ACMN_Error_Logger_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Controls settings for Error Logging</description>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Toggles the module on or off</description>
        <inlineHelpText>Toggles the module on or off</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Truncate_Days__c</fullName>
        <defaultValue>30</defaultValue>
        <description>Deletes logs older than this number of days</description>
        <inlineHelpText>Delete logs older than this number of DAYS.</inlineHelpText>
        <label>Truncate Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_Platform_Events__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Defaults to using Platform Events for saving log records.</description>
        <inlineHelpText>Toggle defaulting to using Platform Events for saving log records.</inlineHelpText>
        <label>Use Platform Events</label>
        <type>Checkbox</type>
    </fields>
    <label>ACMN Error Logger Settings</label>
</CustomObject>